cabal-version:      2.4
name:               lens-witherable
version:            0.1.0.0
synopsis:           lens-compatible tools for working with witherable
homepage:
license:            MIT
license-file:       LICENSE
author:             Carl Howells
maintainer:         chowells79@gmail.com
category:           Data

extra-source-files: CHANGELOG.md,
                    README.md

library
    default-language: Haskell2010
    exposed-modules:  Witherable.Lens,
                      Witherable.Lens.Withering

    build-depends:    base >=4.9 && <5,
                      witherable >= 0.4 && < 0.5
    hs-source-dirs:   src
